# shieldx-client

./: .env.ci  .gitignore  README.md  docker-compose.yml  pyproject.toml  trigger2.yml  triggers.yml
.github/workflows/: run_test.yml  shieldx-client.yml
analysis/: benchmark w2.ipynb  benchmark w3.ipynb  benchmark.ipynb
benchmark/: benchmark_event_type.py  benchmark_events.py  benchmark_events_triggers.py  benchmark_rules.py  benchmark_rules_triggers.py  benchmark_triggers.py  benchmark_triggers_triggers.py
shieldx_client/: __init__.py  client.py  config.py
shieldx_client/choreography/: interpreter.py  schema.py
shieldx_client/log/: __init__.py  logger_config.py
shieldx_client/models/: __init__.py  event.py  event_type.py  relations.py  rule.py  trigger.py
tests/: test_choreography_interpreter.py  test_rule_client.py  test_shieldx_client.py
